# spidj

./: .gitignore  Cargo.toml  Claude.md  index.html  package-lock.json  package.json  requirements.md  vite.config.ts
.claude/: poc.md  requirements.md
.claude/plans/: M1-vertical-slice.md  M2-mixing-essentials.md  M3-suggestion-engine.md  M4-graph-view-shell.md  SP-serato-set-planner.md
apps/serato-planner/: index.html  package.json  vite.config.ts
apps/serato-planner/src/: App.tsx  types.ts
apps/serato-planner/src-tauri/: Cargo.toml  tauri.conf.json
apps/serato-planner/src-tauri/capabilities/: default.json
apps/serato-planner/src-tauri/src/: commands.rs  key_normalize.rs  lib.rs  main.rs
apps/serato-planner/src/components/: CratesSidebar.tsx  GraphCanvas.tsx  LibraryBar.tsx  LibraryList.tsx  Settings.tsx  WorkingCrate.tsx
apps/serato-planner/src/ipc/: tauri.ts
apps/spidj/: package.json
apps/spidj/src/: App.tsx
apps/spidj/src-tauri/capabilities/: default.json
apps/spidj/src-tauri/src/: lib.rs  library.rs  main.rs  midi.rs
apps/spidj/src/components/: AudioBar.tsx  Crossfader.tsx  Deck.tsx  MidiBar.tsx
apps/spidj/src/engine/: suggestionEngine.test.ts  types.ts
apps/spidj/src/ipc/: tauri.ts
crates/serato-io/: Cargo.toml
crates/serato-io/examples/: dump_library.rs
crates/serato-io/src/: crate_writer.rs  lib.rs  library.rs  record.rs
crates/spidj-engine/: Cargo.toml
crates/spidj-engine/src/: camelot.rs  lib.rs  mock_library.rs  scoring.rs  types.rs
crates/spidj-engine/tests/: engine.rs
phases/: PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-SP-0.md  PHASE-SP-1.md  PHASE-SP-2.md  PHASE-SP-3.md
prototypes/: DJ Graph View Wireframes.html  app.jsx  chrome.jsx  data.jsx  graph.jsx
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  commands.rs  deck.rs  lib.rs  midi.rs
src/components/: Deck.tsx  Library.tsx
src/engine/: camelot.ts  mockLibrary.ts  suggestionEngine.ts
src/ipc/: tauri.ts
