[package]
name = "serato-planner"
version = "0.0.1"
description = "spidj — offline Serato set planner"
authors = ["spidj"]
edition.workspace = true

[lib]
name = "serato_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
anyhow = "1"

spidj-engine = { path = "../../../crates/spidj-engine" }
serato-io = { path = "../../../crates/serato-io" }

[features]
custom-protocol = ["tauri/custom-protocol"]
